# Peshki_M

./: .gitignore  README.md  go.mod
cmd/vpnclient/: main.go
cmd/vpnclient-ui/: main.go
configs/: PeshkiM.json  withard-reality.json
docs/: TRPO_project_documentation.docx
internal/app/: client.go  client_test.go
internal/config/: load.go  load_test.go  types.go  validate.go
internal/logging/: logger.go
internal/platform/: controller.go  controller_darwin.go  controller_other.go  errors.go  networksetup_darwin.go  networksetup_darwin_test.go  noop.go
internal/runtime/: adapter.go  hysteria.go  hysteria_test.go  outline.go  outline_test.go  process.go  process_test.go  xray.go  xray_shared.go  xray_test.go
internal/ui/: assets.go  open_browser.go  server.go  server_test.go
internal/ui/assets/: index.html
native/: CMakeLists.txt
native/include/: vpn_platform_bridge.h
native/src/: platform_bridge_common.cc  platform_bridge_macos.cc  vpnclient_macos_app.mm
scripts/: build_macos_app.sh  build_macos_dmg.sh
